--- a/www/builder/sources/controls/Checkbox/Checkbox.css
+++ b/www/builder/sources/controls/Checkbox/Checkbox.css
@@ -1,6 +1,6 @@
-.app-checkbox-label {
+.checkbox_label {
 	$(inb pointer c#5e79a3)
 }
-.app-checkbox-label:hover {
+.checkbox_label:hover {
 	$c#49658f
 }
