--- a/www/builder/sources/components/DataTable/DataTable.css
+++ b/www/builder/sources/components/DataTable/DataTable.css
@@ -1,4 +1,4 @@
-.app-datatable-outer-container {
+.@outer-container {
 	position: absolute;
     top: 8px;
     margin-left: 14px;
@@ -10,6 +10,6 @@
     -webkit-user-select: none;
     -moz-user-select: none;
 }
-.view-content.form-expanded .app-datatable-outer-container {
+.view-content.form-expanded .@outer-container {
 	left: 336px;
 }
