--- a/www/builder/sources/components/DataTable/Rows/DataTableStandartRow/DataTableStandartRow.css
+++ b/www/builder/sources/components/DataTable/Rows/DataTableStandartRow/DataTableStandartRow.css
@@ -1,28 +1,28 @@
-.app-datatable-standart-row-top {
+.@top {
 	$(rel pt7 pb7 h20 nowrap ovh)
 }
-.app-datatable-standart-row-name {
+.@name {
 	$(segoebold lh17 fs16 c#53638f pr220)
 }
-.app-datatable-standart-row.viewed .app-datatable-standart-row-name {
+.@.viewed .@name {
 	$segoe
 }
-.app-datatable-standart-row-price {
+.@price {
 	$(abs r5 t34 w200 right bold c#303B58 fs16)
 }
-.app-datatable-standart-row-top-item {
+.@top-item {
 	$(inb pr10 pl10 rel vtop)
 }
-.app-datatable-standart-row-top-item:first-child {
+.@top-item:first-child {
 	$(bold pl0 pr4)
 }
-.app-datatable-standart-row-top-item:after {
+.@top-item:after {
 	$(cnt abs r t4 b2 w1 bc#8D9AB1)
 }
-.app-datatable-standart-row-top-item:first-child:after,
-.app-datatable-standart-row-top-item:last-child:after {
+.@top-item:first-child:after,
+.@top-item:last-child:after {
 	$none
 }
-.app-datatable-standart-row-bottom {
+.@bottom {
 	$(mt10 nowrap h18 pb6)
 }
