--- a/www/builder/sources/components/FilterStatistics/FilterStatistics.css
+++ b/www/builder/sources/components/FilterStatistics/FilterStatistics.css
@@ -1,18 +1,18 @@
 $imgsrc = ../images/filterstat
 
-.app-filter-stat-title {
+.@title {
     $(bc#f1f4f9 p10_15 br3 mb10 rel fs16 c#4c546b bold)
 }
-.app-filter-stat-refresh {
+.@refresh {
 	$(abs r20 t pointer norep lh40 bold png=refresh bp0_50% pl20)
 }
-.app-filter-stat-refresh:hover {
+.@refresh:hover {
 	$c#5c6ea0
 }
-.app-filter-stat-row ==r {
+.@row ==r {
 	$(nowrap p12_0 bob#E0E6F3)
 }
-.app-filter-stat-head ==h th {
+.@head ==h th {
 	$(c#4c546b fs14 normal left p10_0 bob#E0E6F3 w12% box)
 }
 ~r span:nth-child(1),
@@ -26,7 +26,7 @@ $imgsrc = ../images/filterstat
     $c#3EB562
 }
 ~r span:nth-child(4),
-.app-filter-stat-head th:nth-child(4) {
+.@head th:nth-child(4) {
 	$pl10
 }
 ~r span {
@@ -38,6 +38,6 @@ $imgsrc = ../images/filterstat
 ~r span:nth-child(1):hover {
 	$c#6484ca
 }
-.app-filter-stat-content {
+.@content {
 	$(abs t100 b60 l15 r5 ova)
 }
