--- a/www/builder/sources/components/SearchForm/menues/SearchFormFilterMenu/SearchFormFilterMenu.css
+++ b/www/builder/sources/components/SearchForm/menues/SearchFormFilterMenu/SearchFormFilterMenu.css
@@ -1,8 +1,8 @@
-.app-popup-menu-outer-container.filters-menu .app-popup-menu-inner-container {
+.popup-menu_outer-container.filters-menu .popup-menu_inner-container {
 	border: none;
 	overflow: auto;
 }
-.app-popup-menu-outer-container.filters-menu {
+.popup-menu_outer-container.filters-menu {
     margin-top: 3px;
     left: auto;
     right: 0;
@@ -10,10 +10,10 @@
     border: none;
     width: 278px;
 }
-.app-popup-menu-outer-container.filters-menu .app-popup-menu-button {
+.popup-menu_outer-container.filters-menu .popup-menu_button {
 	padding-left: 30px;
 }
-.app-popup-menu-outer-container.filters-menu .app-ui-checkbox {
+.popup-menu_outer-container.filters-menu .checkbox {
 	background-color: transparent;
     border: none !important;
     background-image: url(../images/ui/checkbu.png);
@@ -23,7 +23,7 @@
     top: 50%;
     margin-top: -7px;
 }
-.app-popup-menu-outer-container.filters-menu .app-ui-checkbox.checked {
+.popup-menu_outer-container.filters-menu .checkbox.checked {
     background-image: url(../images/ui/checkb.png);
     opacity: 1;
 }
