--- a/www/builder/sources/controls/Input/Input.css
+++ b/www/builder/sources/controls/Input/Input.css
@@ -1,31 +1,31 @@
-.app-input-container {
+.input-container {
 	margin: 5px 0;
 }
-.app-input-container.half-width {
+.input-container.half-width {
 	$inb $w49% $vtop
 }
-.app-input-container.half-width:nth-child(2n) {
+.input-container.half-width:nth-child(2n) {
 	$ml2%
 }
-.app-input-caption {
+.input-caption {
 	$c#6f7b9a $fs14 $lh14 $mb6
 }
-.app-input-container textarea,
-.app-input-container input {
+.input-container textarea,
+.input-container input {
 	$(p10 box w100% c#6f7b9a bold fs14 bo#bec8da br3)
     box-shadow: inset 2px 1px 3px #d7deec;
 }
-.app-input-container textarea:focus,
-.app-input-container input:focus {
+.input-container textarea:focus,
+.input-container input:focus {
     $boc#38986a 
     box-shadow: 1px 1px 6px #93C7AE;
     outline: none;
 }
-.app-input-container input::-webkit-input-placeholder,
-.app-input-container textarea::-webkit-input-placeholder {
+.input-container input::-webkit-input-placeholder,
+.input-container textarea::-webkit-input-placeholder {
 	$(regular c#72798c)
 }
-.app-input-container input:focus::-webkit-input-placeholder,
-.app-input-container textarea:focus::-webkit-input-placeholder {
+.input-container input:focus::-webkit-input-placeholder,
+.input-container textarea:focus::-webkit-input-placeholder {
 	$(c#a5abbe)
 }
