--- a/www/builder/sources/controls/Select/Select.css
+++ b/www/builder/sources/controls/Select/Select.css
@@ -1,56 +1,56 @@
 $imgsrc = ../images/ui
 
-.app-select {
+.@ {
     $(rel box bold c#6f7b9a fs14 bo#bec8da br3 pointer)
     box-shadow: inset 2px 1px 3px #d7deec;
 }
-.app-select.frameless {
+.@.frameless {
     $(nob nosh)
 }
-.app-select:hover {
+.@:hover {
     $boc#68758c
     box-shadow: 1px 1px 6px #bfc7d8;
 }
-.app-select.frameless:hover {
+.@.frameless:hover {
     $nosh
 }
-.app-select:after {
+.@:after {
     $(cnt abs r8 t50% mt-2 png=select-arrow w10 h5 opac8)
 }
-.app-select.frameless:after {
+.@.frameless:after {
     $(rel ra ta inb vmid mt3 ml7)
 }
-.app-select:hover:after {
+.@:hover:after {
     $opac10
 }
-.app-select.active {
+.@.active {
     $z10
 }
-.app-select.active:hover {
+.@.active:hover {
     $z15
 }
-.app-select-value {
+.@value {
     $ (p10 nowrap ovh ell)    
 }
-.app-select.frameless .app-select-value {
+.@.frameless .@value {
     $(inb vmid p5_0)
 }
-.app-select-options {
+.@options {
     $(abs none t100% l-1 r-1 mt2 mah300 bgwhite bo#bec8da br4 p6 regular ova bsh_2_2_5_#e4e4e4)
 }
-.app-select.active .app-select-options {
+.@.active .@options {
     $block 
 }
-.app-select-option {
+.@option {
     $(lh13 fs13 p7 tovh pointer c#444C61)
 }
-.app-select-option:hover {
+.@option:hover {
     $ (c#5f6b7f bc#e7ecf4)
 }
-.app-select-option.disabled {
+.@option.disabled {
     $c#a5aec0
     cursor: default;
 }
-.app-select-option.disabled:hover {
+.@option.disabled:hover {
     $bgwhite
 }
