--- a/www/builder/sources/controls/Tags/Tags.css
+++ b/www/builder/sources/controls/Tags/Tags.css
@@ -1,24 +1,50 @@
 $imgsrc = ../images/ui
 
-.app-tags-container {
-	$(rel mb6 bc#f3f5f7 p5 c#666 fs13 bo#dde5f3 br2 mih182 mah182 h182)
-    box-shadow: 1px 1px 6px #f0f4f7;
+.@container {
+	$(rel mb6 bc#f3f5f7 p5 c#666 fs13 bo#dde5f3 br2 mih182 mah182 h182 bsh_1_1_6_#f0f4f7)
 }
-.app-tags-content {
+.@content {
 	$(abs t56 l r b p0_4 ovh br0_0_2_2)
 }
-.app-tags-item {
+.@item {
 	$(maw260 c#38986a bc#E8F3E7 bo#38986a pointer br3 pr30 m2 block fleft rel box h28 lh26)
 }
-.app-tags-item.optioned {
+.@item.optioned {
 	$(bc#8ebe8d boc#689a67 white tsh_1_1_1_#204029 bold)
 }
-.app-tags-item-text {
+.@item-text {
 	$(inb maw225 ovh nowrap ell semibold pl10)
 }
-.app-tags-remove {
+.@remove {
 	$(png=tagsclearg pointer abs r7 t6 block bg wh15 opac7)
 }
-.app-tags-remove:hover {
+.@remove:hover {
 	$opac10
+}
+.@top-buttons-item {
+	$(inb h18 lh18)
+}
+.@top-buttons-item:first-child {
+	$(c#5f6b7f pr12)
+}
+.@top-buttons-item:nth-child(2) {
+	$(pl14 bol#cfd5e1 pr3)
+}
+.@top-buttons-item:nth-child(2) span {
+	$(pointer c#a66666)
+}
+.@top-buttons-item:nth-child(2) span:hover {
+	$c#6c3a3a
+}
+.@select-button {
+	$(fs12 c#5f6b7f mr12 inb pointer png=select-arrow-small norep pr12 bp100%_50% rel)
+}
+.@select-button:hover {
+	$(c#444c61)
+}
+.@top {
+	$(h16 nowrap p2_0_2_0 rel z12)
+}
+.@top-buttons {
+	$(fright fs12)
 }
