--- a/www/builder/sources/ui/Tabs/Tabs.css
+++ b/www/builder/sources/ui/Tabs/Tabs.css
@@ -1,15 +1,15 @@
 $imgsrc = ../images/ui
 
-.app-tabs {
+.@ {
 	$(inb mb5 bo#5f79ab br6 lh22)
 }
-.app-tabs-item ==i {
+.@item ==i {
 	$(rel inb c#7a869e p3_27_5_16 pointer)
 }
 ~i.active ==ia {
 	$(bc#5f79ab br3 c#fff)
 }
-.app-tabs-remove ==r {
+.@remove ==r {
 	$(abs wh15 br50% bc#7f8aa6 r4 t4 bg png=tabclose)
 }
 ~r:hover ==rh {
