--- a/www/builder/sources/components/DataTable/DataTable.css
+++ b/www/builder/sources/components/DataTable/DataTable.css
@@ -1,3 +1,6 @@
+$imgsrc = 'lalala';
+$imgsrc2 = 'lalala2';
+
 .@outer-container {
 	position: absolute;
     top: 8px;
@@ -12,4 +15,13 @@
 }
 .view-content.form-expanded .@outer-container {
 	left: 336px;
+}
+.@ {
+    width: 1px;
+    .@name {
+        height: 1px;
+        &.@lastname {
+            color: black;
+        }
+    }
 }
