--- a/www/builder/sources/components/SearchForm/SearchForm.css
+++ b/www/builder/sources/components/SearchForm/SearchForm.css
@@ -1,81 +1,72 @@
 $imgsrc = ../images/searchform
 
-.@ ==f {
+.@ {
 	$(abs z2 t7 l-300 b7 w330 br4 c#222121 bc#444b57)
 }
-.view-content.form-expanded ~f {
+.view-content.form-expanded .@ {
     $l7
 }
-
-
-.@title ==t {
+.@title {
     $(h37 lh39 pl31 bold fs14 box c#edf0f4 bob#3e4552 br4_4_0_0 gr_bottom_#647188_#4d5768)
+    &:before {
+        $(cnt inb w11 h11 mr8 png = search)
+    }
 }
-~t:before {
-    $(cnt inb w11 h11 mr8 png = search)
-}
-
-
-.@close-side ==s {
+.@close-side {
     $(abs noimg t r b pointer w30 z25 bc#6279A7 br0_3_3_0 ha)
+    &:hover {
+        $bc#6E88BD
+    }
+    &:after {
+        content: 'Расширенный поиск';
+        $(rot-90 fs16 white lh20 abs r-83 t90 w200 bold)
+    }
 }
-~s:hover {
-    $bc#6E88BD
-}
-~s:after {
-    content: 'Расширенный поиск';
-    $(rot-90 fs16 white lh20 abs r-83 t90 w200 bold)
-}
-.view-content.form-expanded ~s {
+.view-content.form-expanded .@close-side {
     $none
 }
-
-
-.@close ==c {
+.@close {
     $(rot180 block abs r t7 norep pointer z26 wh23 png=close bp100%_50%)
     transition: all 0.2s ease-out;
 }
-.view-content.form-expanded ~c {
+.view-content.form-expanded .@close {
     $rot0 $r10
 }
-
-
-.@reset ==a {
+.@reset {
     $(abs r34 t5 pl22 lh16 h25 w0 fs14 bold norep pointer nowrap z10 png=clear c#5c606a bp100%_50%)
+    .hover-label {
+        $(none abs white r lh36 t50% mt-18 bc#D35655 p0_10_0_11)
+    }
+    &:hover .hover-label {
+        $block
+    }
+    .confirm-label {
+        $(none nowrap white right lh36)
+    }
+    .confirm-reset-filter {
+        $ml15
+    }
+    &.active {
+        $(w134 h36 t bc#D35655)
+        .hover-label {
+            $none
+        }
+        .confirm-label {
+            $block
+        }
+        .confirm-reset-filter {
+            $(lh36 pointer bc#B35050 p9_15)
+        }
+    }
 }
-~a .hover-label {
-    $(none abs white r lh36 t50% mt-18 bc#D35655 p0_10_0_11)
-}
-~a:hover .hover-label {
-    $block
-}
-~a .confirm-label {
-    $(none nowrap white right lh36)
-}
-~a .confirm-reset-filter {
-    $ml15
-}
-
-
-~a.active ==b {
-    $(w134 h36 t bc#D35655)
-}
-~b .hover-label {
-    $none
-}
-~b .confirm-label {
-    $block
-}
-~b .confirm-reset-filter {
-    $(lh36 pointer bc#B35050 p9_15)
-}
-
 .@button {
     $(pointer)
-}
-.@button.search-keywords {
-    $(p5_25_5_25)
-}
-.@button.search-keywords div {
-    $(bgwhite lh38 br3 bo#38414f c#72798c box pl15)
+    &.search-keywords {
+        & {
+            $(p5_25_5_25)
+        }
+        div {
+          $(bgwhite lh38 br3 bo#38414f c#72798c box pl15)
+        }
+    }
 }
