--- a/www/builder/sources/ui/AutoComplete/AutoComplete.css
+++ b/www/builder/sources/ui/AutoComplete/AutoComplete.css
@@ -1,27 +1,27 @@
 $imgsrc = ../images/ui
 
-.@ ==a {
+.@ {
 	$(rel)
+	.add {
+		$(abs t50% mt-16 r5 w86 lh33 z10)
+		&:after {
+			$(cnt abs l-22 t50% wh22 mt-11 png=enter bg bgwhite)
+		}
+	}
 }
-~a .add {
-	$(abs t50% mt-16 r5 w86 lh33 z10)
-}
-~a .add:after {
-	$(cnt abs l-22 t50% wh22 mt-11 png=enter bg bgwhite)
-}
-.@variants ==v {
+.@variants {
 	$(abs t100% mt2 l r p5 pr0 bgwhite br2 bsh_1_1_6_#bec9d4 box z100 bo#788097 none)
-}
-~v.shown {
-	$block
+	&.shown {
+		$block
+	}
 }
 .@inner {
 	$(mah290 ova rel z2 pr5)
 }
-.@variant ==vv {
+.@variant {
 	$(block rel p6_8 lh16 pointer nowrap c#515a71 br3)
-}
-~vv.active,
-~vv:hover {
-	$(white bc#687da3)
+	&.active,
+	&:hover {
+		$(white bc#687da3)
+	}
 }
