--- a/www/builder/sources/ui/Tabs/Tabs.css
+++ b/www/builder/sources/ui/Tabs/Tabs.css
@@ -3,21 +3,23 @@ $imgsrc = ../images/ui
 .@ {
 	$(inb mb5 bo#5f79ab br6 lh22)
 }
-.@item ==i {
+.@item {
 	$(rel inb c#7a869e p3_27_5_16 pointer)
+	&.active {
+		$(bc#5f79ab br3 c#fff)
+
+		.@remove {
+			$bc#1a274a;
+			
+			&:hover {
+				$bc#99b0ef
+			}
+		}
+	}
 }
-~i.active ==ia {
-	$(bc#5f79ab br3 c#fff)
-}
-.@remove ==r {
+.@remove {
 	$(abs wh15 br50% bc#7f8aa6 r4 t4 bg png=tabclose)
-}
-~r:hover ==rh {
-	$bc#5a6786
-}
-~ia ~r {
-	$bc#1a274a
-}
-~ia ~rh {
-	$bc#99b0ef
+	&:hover {
+		$bc#5a6786
+	}
 }
